add api doc for post electricity
